--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(kurasuta C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(kurasuta addkadai3.c gene_association.sgd)
+add_executable(kurasuta addkadai2.c)
